# packages/contracts/openapi.json
@@ -1612,11 +1612,17 @@
                   },
                   "simulateFailure": {
                     "type": "boolean"
+                  },
+                  "buyerId": {
+                    "type": "string",
+                    "format": "uuid",
+                    "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
                   }
                 },
                 "required": [
                   "shippingAddress",
-                  "method"
+                  "method",
+                  "buyerId"
                 ],
                 "additionalProperties": false
               }
